--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Program Files\\Python38\\python.exe",
+    "python.pythonPath": "C:\\Python\\python.exe",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
